# zmm-bg3

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
_settings/: settings_bkp.json
